build docker image on tag

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,6 +3,7 @@ name: Build Next.js
 on:
   push:
     branches: [ "master", "develop" ]
+    tags: [ "v*" ]
   pull_request:
     branches: [ "master", "develop" ]
   workflow_dispatch:
@@ -109,6 +110,10 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
 
       - name: Use cached .next output
         uses: actions/cache/restore@v4
